tests/baselines/reference/emitArrowFunctionWhenUsingArguments07(alwaysstrict=true,target=es5).errors.txt
emitArrowFunctionWhenUsingArguments07.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments07.ts(2,14): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments07.ts(2,34): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments07.ts (3 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var a = (arguments) => () => arguments;
                 ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                                     ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    }